[metadata]
name = python-tokenex
license = MIT License
description = Python Module and CLI for interacting with TokenEx services
author = Tablet, Inc
author-email = ops@tablethotels.com
home-page = https://github.com/tablethotels/python-tokenex
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[wheel]
universal = 1
